force-app/main/default/objects/EmailAddresses__c/EmailAddresses__c.object-meta.xml
<CustomObject>
    <description>List of email addresses associated with a person and a dealer</description>
    <label>Email Address</label>
    <nameField>
        <displayFormat>EML-{000000000}</displayFormat>
        <label>Email Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>