force-app/main/default/objects/EmailAddresses__c/fields/Activator_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Activator_EmailId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Email Address in the Activator System</inlineHelpText>
    <label>Activator Email Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>