force-app/main/default/objects/EmailAddresses__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Dealer associated with this Person/Email Address pair</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Email Addresses</relationshipLabel>
    <relationshipName>Email_Addresses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>