force-app/main/default/objects/EmailAddresses__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>