force-app/main/default/objects/EmailAddresses__c/fields/EmailStatus__c.field-meta.xml
<CustomField>
    <fullName>EmailStatus__c</fullName>
    <label>Email Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Filtered</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>