force-app/main/default/objects/EmailAddresses__c/fields/OptOutFlag__c.field-meta.xml
<CustomField>
    <fullName>OptOutFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this email address opted out for this Dealer/Person Pair</inlineHelpText>
    <label>Opt Out Flag</label>
    <type>Checkbox</type>
</CustomField>