force-app/main/default/objects/EmailAddresses__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Person associated with this Email address for the related dealer</inlineHelpText>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Addresses</relationshipLabel>
    <relationshipName>Email_Addresses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>